<resources>
    <string name="app_name">CalorieTracker</string>
    <string name="Signup">Button</string>
    <string name="title_activity_homepage">Calorie Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="My_Daily_Diet">My Daily Diet</string>
    <string name="Steps">Steps</string>
    <string name="Calorie_Tracker">Calorie Tracker</string>
    <string name="Reports">Report Pie</string>
    <string name="Reports_bar">Report Bar</string>
    <string name="Map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>

</resources>
